@@ -13,7 +13,7 @@ Core and Builtins
 -----------------
 
 - Issue #7065: Fix a crash in bytes.maketrans and bytearray.maketrans when
-  using byte values greater than 127.  Patch by egreen.
+  using byte values greater than 127.  Patch by Derk Drukker.
 
 - Issue #7019: Raise ValueError when unmarshalling bad long data, instead
   of producing internally inconsistent Python longs.
@@ -30,6 +30,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7080: locale.strxfrm() raises a MemoryError on 64-bit non-Windows
+  platforms, and assorted locale fixes by Derk Drukker.
+
 - Issue #5833: Fix extra space character in readline completion with the
   GNU readline library version 6.0.
 
@@ -45,7 +48,7 @@ Library
   is too large to fit in the current precision.
 
 - Issue #6236, #6348: Fix various failures in the I/O library under AIX
-  and other platforms, when using a non-gcc compiler. Patch by egreen.
+  and other platforms, when using a non-gcc compiler. Patch by Derk Drukker.
 
 - Issue #6954: Fixed crash when using DISTUTILS_DEBUG flag in Distutils.
 
